k8s/qr-django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qr-django-deployment
  namespace: development
  labels:
    app: qr-django
spec:
  replicas: 3
  selector:
    matchLabels:
      app: qr-django
  template:
    metadata:
      labels:
        app: qr-django
    spec:
      containers:
      - name: qr-django
        image: qr-django:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: qr-django-service
  namespace: development
spec:
  selector:
    app: qr-django
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
